infra/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host:
      http:   
        paths:   
          - path: /
            pathType: Prefix   
            backend:   
              service:   
                name: frontend   
                port:   
                  number: 80
